@@ -70,14 +70,14 @@ public class CourseNode extends Node<Course, SectionNode, Section, LessonNode> {
             Course data;
 
             if (!courses.isEmpty()) {
-                data = courses.getCourses().get(0);
+                data = courses.getFirst();
             } else {
                 data = new Course();
                 data.setId(id);
             }
-            setData(data);
 
             Course oldData = this.getData();
+            setData(data);
             return oldData == null || !oldData.getUpdateDate().equals(data.getUpdateDate());
         } catch (StepikClientException logged) {
             logger.warn(String.format("Failed load course data id=%d", id), logged);
