@@ -47,14 +47,14 @@ public class SectionNode extends Node<Section, LessonNode, CompoundUnitLesson, S
             Section data;
 
             if (!sections.isEmpty()) {
-                data = sections.getSections().get(0);
+                data = sections.getFirst();
             } else {
                 data = new Section();
                 data.setId(id);
             }
-            setData(data);
 
             Section oldData = this.getData();
+            setData(data);
             return oldData == null || !oldData.getUpdateDate().equals(data.getUpdateDate());
         } catch (StepikClientException logged) {
             logger.warn(String.format("Failed load section data id=%d", id), logged);
